# labnas

./: .gitignore  PLAN_IMPLEMENTACION.md  README.md  diagnostico.sh  diagnostico2.sh  labnas.sh  setup-mdns.sh  setup-tailscale.sh  version.sh
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: config.rs  main.rs  middleware.rs  state.rs
backend/src/handlers/: auth.rs  email.rs  extras.rs  files.rs  mod.rs  music.rs  network.rs  notifications.rs  printers3d.rs  printing.rs  system.rs  tasks.rs  terminal.rs
backend/src/models/: auth.rs  email.rs  files.rs  mod.rs  network.rs  notes.rs  notifications.rs  printers3d.rs  printing.rs  system.rs  tasks.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: Layout.tsx  MusicPanel.tsx  PersistentTerminal.tsx  Toast.tsx  ToastContext.tsx
frontend/src/pages/: DashboardPage.tsx  EmailPage.tsx  FilesPage.tsx  LoginPage.tsx  NetworkPage.tsx  NotesPage.tsx  Printers3DPage.tsx  PrintingPage.tsx  SettingsPage.tsx  TasksPage.tsx  TerminalPage.tsx
frontend/src/themes/: ThemeContext.tsx  themes.ts
frontend/src/types/: index.ts  notes.ts
